// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckableCard is rendered 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard testClass1 testClass2"
>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
  >
    <div
      aria-label="aria-label"
      class="euiRadio euiRadio--noLabel"
      data-test-subj="test subject string"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
  >
    <label
      class="euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders a checkbox when specified 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard testClass1 testClass2"
>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
  >
    <div
      class="euiCheckbox euiCheckbox--noLabel"
    >
      <input
        aria-label="aria-label"
        class="euiCheckbox__input"
        data-test-subj="test subject string"
        id="id"
        type="checkbox"
      />
      <div
        class="euiCheckbox__square"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
  >
    <label
      class="euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders children 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
  >
    <label
      aria-describedby="id-details"
      class="euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
    <div
      class="euiCheckableCard__children"
      id="id-details"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCheckableCard renders disabled 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isDisabled"
>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiSplitPanel__inner"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        disabled=""
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
  >
    <label
      class="euiCheckableCard__label euiCheckableCard__label-isDisabled"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders panel props 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--noBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        id="id"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
  >
    <label
      class="euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;
